import "lot/apply.proto";
import "lot/distributeby.proto";
import "lot/filter.proto";
import "lot/aggregate.proto";
import "lot/join.proto";
import "lot/select.proto";
import "lot/sortby.proto";
import "lot/datasource.proto";
import "lot/datasink.proto";
import "lot/limit.proto";
import "lot/unionall.proto";
import "lot/window.proto";
import "lot/transform.proto";

package apsara.odps.lot;

message LogicalOperator
{
    optional Apply Apply = 1;
    optional DistributeBy DistributeBy = 2;
    optional Filter Filter = 3;
    optional Aggregate Aggregate = 4;
    optional Join Join = 5;
    optional Select Select = 6;
    optional SortBy SortBy = 7;
    optional DataSource DataSource = 8;
    optional DataSink DataSink = 9;
    optional Limit Limit = 10;
    optional UnionAll UnionAll = 11;
    optional Window Window = 12;
    optional Transform Transform = 13;
}

message LogicalOperatorTree
{
    repeated LogicalOperator Operators = 1;
}

