import "lot/lot.proto";
import "lot/ddl.proto";
import "lot/expression.proto";

package apsara.odps.lot;

message LotTask
{
    optional int64 Version = 1 [default = 19851003];
    repeated group Environment = 2
    {
        required string Key = 1;
        required string Value = 2;
    };
    optional DDL DDL = 3;
    optional LogicalOperatorTree Lot = 4;
    repeated TemporaryFunction TempFunctions = 5;
}
